@@ -10,9 +10,13 @@ common = tex4ht-cpright.tex common.tex common-code.tex
 common_info = $(common) common-info.tex
 derived = 
 
+derived += $(tex4ht_env_derived)
+tex4ht_env_derived = tex4ht.env-unix tex4ht.env-win32
+
 derived += $(tex4ht_fonts_noncjk_derived)
 tex4ht_fonts_noncjk_derived = SearchFonts.java cmtex.htf # and thousands more
 # also, whither lm-htf.tex?  whither tmp?  how change target dir?
+
 derived += $(tex4ht_htcmd_derived)
 tex4ht_htcmd_derived = htcmd.c
 
@@ -126,6 +130,9 @@ xtpipes_derived = \
 
 # 
 all: $(derived)
+
+$(tex4ht_env_derived): tex4ht-env.tex $(common)
+	htlatex $< "xhtml,3" "" "-d./" $(tex_args)
 
 $(tex4ht_fonts_noncjk_derived): tex4ht-fonts-noncjk.tex $(common)
 	ht tex $<
